--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: acitions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
@@ -35,6 +35,7 @@ jobs:
   test:
     name: Test Phase
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
