--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -81,7 +81,9 @@ jobs:
         run: npm install
 
       - name: Prepare Google Application Credentials
-        run: echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS  }} | base64 --decode > $HOME/private-key.json
+        run: | 
+          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS  }} 
+          base64 --decode > $HOME/private-key.json
 
       - name: Deploy Firebase
         run: | 
