--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: npm install
 
       - name: Build application
@@ -45,11 +45,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm install
-      
+
       - name: Run tests
         run: npm run test
 
@@ -61,12 +61,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-    
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-         node-version: 20
-         cache: "npm"
+          node-version: 20
+          cache: "npm"
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
@@ -81,20 +81,15 @@ jobs:
         run: npm install
 
       - name: Prepare Google Application Credentials
-        run: | 
-          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS  }} 
-          base64 --decode > $HOME/private-key.json
+        run: |
+          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} | base64 --decode > $HOME/private-key.json
 
       - name: Deploy Firebase
-        run: | 
-          export ${{ secrets.GOOGLE_APPICATION_CREDENTIALS }}="$HOME/private-key.json"
+        run: |
+          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/private-key.json"
           firebase experiments:enable webframeworks
           firebase deploy --only hosting
 
       - name: Remove private key
         if: always()
         run: rm $HOME/private-key.json
-
-
-
-        
