--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Prepare Google Application Credentials
         run: |
-          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} |
+          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           base64 --decode > $HOME/private-key.json
 
       - name: Deploy Firebase
