--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,49 +1,48 @@
 name: Todo App CI/CD Pipeline
 
 on:
-  push:
+  push: 
     branches: [main]
-
 jobs:
   build:
     name: Build Phase
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+     - name: Checkout
+       uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
+     - name: Setup Node.js
+       uses: actions/setup-node@v4
+       with:
+        node-version: 20
+        cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
+     - name: Install dependencies
+       run: npm install
 
-      - name: Build application
-        run: npm run build
+     - name: Build application
+       run: npm run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-files
-          path: dist/
-          retention-days: 1
+     - name: Upload build artifacts
+       uses: actions/upload-artifact@v4
+       with:
+        name: build-files
+        path: dist/
+        retention-days: 1
 
   test:
-    name: Test Phase
-    runs-on: ubuntu-latest
-    needs: build
+     name: Test Phase
+     runs-on: ubuntu-latest
+     needs: build
 
-    steps:
+     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
-        with:
+        with: 
           node-version: 20
           cache: "npm"
 
@@ -54,43 +53,42 @@ jobs:
         run: npm run test
 
   deploy:
-    name: Deploy Phase
-    runs-on: ubuntu-latest
-    needs: [build, test]
+      name: Deploy Phase
+      runs-on: ubuntu-latest
+      needs: [build, test]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-files
-          path: dist/
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: build-files
+            path: dist/
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+        - name: Install Firebase CLI
+          run: npm install -g firebase-tools
 
-      - name: Install dependencies
-        run: npm install
+        - name: Install dependencies
+          run: npm install
 
-      - name: Prepare Google Application Credentials
-        run: |
-          echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          base64 --decode > $HOME/private-key.json
+        - name: Prepare Google Application Credentials
+          run: |
+            echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+            base64 -d > $HOME/private-key.json
 
-      - name: Deploy Firebase
-        run: |
-          export GOOGLE_APPLICATION_CREDENTIALS="$HOME/private-key.json"
-          firebase experiments:enable webframeworks
-          firebase deploy --only hosting
+        - name: Deploy Firebase
+          run: |
+            export GOOGLE_APPLICATION_CREDENTIALS="$HOME/private-key.json"
+            firebase experiments:enable webframeworks
+            firebase deploy --only hosting
 
-      - name: Remove private key
-        if: always()
-        run: rm $HOME/private-key.json
+        - name: Remove private key
+          if: always()
+          run: rm $HOME/private-key.json
+
+     
