--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,58 +1,59 @@
 name: Todo App CI/CD Pipeline
 
 on:
-  push: 
+  push:
     branches: [main]
+
 jobs:
-  build:
-    name: Build Phase
-    runs-on: ubuntu-latest
+    build:
+      name: Build Phase
+      runs-on: ubuntu-latest
 
-    steps:
-     - name: Checkout
-       uses: actions/checkout@v4
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
 
-     - name: Setup Node.js
-       uses: actions/setup-node@v4
-       with:
-        node-version: 20
-        cache: "npm"
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: "npm"
 
-     - name: Install dependencies
-       run: npm install
+        - name: Install dependencies
+          run: npm Install
 
-     - name: Build application
-       run: npm run build
+        - name: Build application
+          run: npm run build
 
-     - name: Upload build artifacts
-       uses: actions/upload-artifact@v4
-       with:
-        name: build-files
-        path: dist/
-        retention-days: 1
+        - name: Upload build artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: build-files
+            path: dist/
+            retention-days: 1
 
-  test:
-     name: Test Phase
-     runs-on: ubuntu-latest
-     needs: build
+    test:
+      name: Test Phase
+      runs-on: ubuntu-latest
+      needs: build
 
-     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+        
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: "npm"
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with: 
-          node-version: 20
-          cache: "npm"
+        - name: Install dependencies
+          run: npm Install
 
-      - name: Install dependencies
-        run: npm install
+        - name: Run tests
+          run: npm run test
 
-      - name: Run tests
-        run: npm run test
-
-  deploy:
+    deploy:
       name: Deploy Phase
       runs-on: ubuntu-latest
       needs: [build, test]
@@ -63,10 +64,13 @@ jobs:
 
         - name: Setup Node.js
           uses: actions/setup-node@v4
+          with:
+            node-version: 20
+            cache: "npm"
 
         - name: Download build artifacts
           uses: actions/download-artifact@v4
-          with:
+          with: 
             name: build-files
             path: dist/
 
@@ -78,8 +82,8 @@ jobs:
 
         - name: Prepare Google Application Credentials
           run: |
-            echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} | base64 --decode > $HOME/private-key.json
-
+            echo ${{ secrets.GOOGLE_APLICATION_CREDENTIALS }} | base64 --decode > $HOME/private-key.json
+          
         - name: Deploy Firebase
           run: |
             export GOOGLE_APPLICATION_CREDENTIALS="$HOME/private-key.json"
@@ -90,4 +94,5 @@ jobs:
           if: always()
           run: rm $HOME/private-key.json
 
-     
+
+        
