--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -48,7 +48,7 @@ jobs:
             cache: "npm"
 
         - name: Install dependencies
-          run: npm Install
+          run: npm install
 
         - name: Run tests
           run: npm run test
